[build-system]
# Minimum requirements for the build system to execute.
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0"]

# This is configuration specific to the `setuptools` build backend.
# If you are using a different build backend, you will need to change this.
[tool.setuptools.packages.find]
exclude = ["causalpy.test*", "docs*"]

[tool.setuptools.package-data]
"causalpy.data" = ["*.csv"]
"causalpy.templates" = ["*.html"]

[project]
name = "CausalPy"
version = "0.8.0"
description = "Causal inference for quasi-experiments in Python"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Ben Vincent", email = "ben.vincent@pymc-labs.com" }]
requires-python = ">=3.11"
keywords = ["causal inference", "statistics", "econometrics", "pymc", "bayesian"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Mathematics",
]

# This field lists other packages that your project depends on to run.
# Any package you put here will be installed by pip when your project is
# installed, so they must be valid existing projects.
#
# For an analysis of this field vs pip's requirements files see:
# https://packaging.python.org/discussions/install-requires-vs-requirements/
dependencies = [
    "arviz>=0.14.0,<1.0",
    "graphviz",
    "ipython!=8.7.0",
    "jinja2",
    "matplotlib>=3.5.3",
    "numpy",
    "pandas",
    "patsy",
    "pymc>=5.15.1,<6",
    "pytensor>=2.38.1,<3",
    "scikit-learn>=1",
    "scipy",
    "seaborn>=0.11.2",
    "statsmodels",
    "xarray>=v2022.11.0",
    "pymc-extras>=0.3.0",
]

# List additional groups of dependencies here (e.g. development dependencies). Users
# will be able to install these using the "extras" syntax, for example:
#
#   $ pip install causalpy[dev]
#
# Similar to `dependencies` above, these must be valid existing projects.
[project.optional-dependencies]
dev = [
    "prek",
    "twine",
    "codespell",
    "nbformat",
    "nbconvert",
    "PyYAML",
]
docs = [
    "ipykernel",
    "maketables",
    "pymc-marketing>=0.13.1",
    "daft-pgm",
    "linkify-it-py",
    "myst-nb<=1.0.0",
    "pathlib",
    "pylint",
    "sphinx",
    "sphinx-autodoc-typehints",
    "sphinx_autodoc_defaultargs",
    "labs-sphinx-theme",
    "sphinx-copybutton",
    "sphinx-rtd-theme",
    "sphinx-sitemap",
    "statsmodels",
    "sphinxcontrib-bibtex>=2.7.0",
    "sphinx-notfound-page",
    "ipywidgets",
    "sphinx-design",
    "sphinx-togglebutton",
    "nbformat",
    "nbconvert",
    "Pillow",
    "PyYAML",
    "sphinxext-rediraffe",
]
lint = ["prek", "ruff", "mypy"]
test = ["pytest", "pytest-cov", "diff-cover", "codespell", "nbformat", "nbconvert", "papermill"]

[tool.pyproject2conda]
channels = ["conda-forge"]

[project.urls]
Homepage = "https://github.com/pymc-labs/CausalPy"
"Bug Reports" = "https://github.com/pymc-labs/CausalPy/issues"
Source = "https://github.com/pymc-labs/CausalPy"
Documentation = "https://causalpy.readthedocs.io"
Changelog = "https://github.com/pymc-labs/CausalPy/releases"
Discussions = "https://github.com/pymc-labs/CausalPy/discussions"

[tool.pytest.ini_options]
addopts = [
    "-vv",
    "--strict-markers",
    "--strict-config",
    "--cov=causalpy",
    "--cov-report=term-missing",
]
testpaths = "causalpy/tests"
markers = [
    "integration: mark as an integration test.",
    "slow: mark test as slow.",
]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
extend-select = [
    "I",   # isort
    # "E",   # pycodestyle errors - PEP 8 style violations
    # "W",   # pycodestyle warnings - PEP 8 warnings
    "F",   # pyflakes - detect unused imports, undefined names
    "B",   # flake8-bugbear - find likely bugs and design problems
    "UP",  # pyupgrade - modern Python syntax upgrades
    "C4",  # flake8-comprehensions - better list/dict comprehensions
    "SIM", # flake8-simplify - suggest simpler code
]

[tool.ruff.lint.per-file-ignores]
# Notebooks display dataframes via bare expressions on the last line of a cell.
"*.ipynb" = ["B018"]

[tool.codespell]
ignore-words = "./docs/source/.codespell/codespell-whitelist.txt"
skip = "*.ipynb,*.csv,*.svg,pyproject.toml,docs/source/.codespell/codespell-whitelist.txt"

# Numpydoc validation. Originally introduced under #886 as a narrow check on
# public ``.plot`` overrides, expanded under #898 to enforce a curated set of
# numpydoc rules across the whole ``causalpy`` package. The ``exclude`` regex
# matches any dotted node whose path contains a private (underscore-prefixed)
# component — private helpers, dunders, and members of private modules are
# considered implementation detail and not subject to docstring validation.
[tool.numpydoc_validation]
checks = [
    "PR01",  # Parameters not documented
    "PR02",  # Unknown parameters
    "PR04",  # Parameter has no type
    "PR07",  # Parameter has no description
    "PR10",  # Parameter requires a space before the colon
    "RT03",  # Return value has no description
    "SS03",  # Summary does not end with a period
    "GL07",  # Sections are in the wrong order
    "GL08",  # Object does not have a docstring
]
exclude = ['\._']

[tool.coverage.run]
source = ["causalpy"]
omit = ["*/conftest.py", "*/tests/conftest.py"]
branch = true  # Also measure branch coverage, not just line coverage

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.mypy]
files = "causalpy/*.py"
exclude = "build|dist|docs|notebooks|tests|setup.py"

[tool.mypy-matplotlib]
ignore_missing_imports = true

[tool.mypy-pymc]
ignore_missing_imports = true

[tool.mypy-seaborn]
ignore_missing_imports = true

[tool.mypy-sklearn]
ignore_missing_imports = true

[tool.mypy-scipy]
ignore_missing_imports = true

[tool.marimo.runtime]
watcher_on_save = "autorun"

# PyMarkdown linter (pre-commit hook) configuration. Primary motivator (issue #899) is enforcing MD032 — lists must be surrounded by blank lines — to mirror the docstring rule already enforced by ``validate-docstring-lists`` (issue #892). The rules below are deliberately disabled because they conflict with project conventions or are noisy on the existing Markdown corpus (see PR #900 for the audit).
[tool.pymarkdown]
# Enable GitHub-flavoured / front-matter extensions so the linter understands YAML front-matter (cursor agent / skill files), GFM task lists, tables, strikethrough, and extended autolinks.
extensions.front-matter.enabled = true
extensions.markdown-task-list-items.enabled = true
extensions.markdown-tables.enabled = true
extensions.markdown-strikethrough.enabled = true
extensions.markdown-extended-autolinks.enabled = true
# Project convention: do not hard-wrap Markdown lines (see AGENTS.md).
plugins.md013.enabled = false
# Many top-level docs (skills, agent definitions, command snippets) start with YAML front-matter or a short paragraph rather than an H1.
plugins.md041.enabled = false
# Allow a mix of setext and atx headings across files.
plugins.md003.enabled = false
# Allow ``1.  item`` style list-marker spacing produced by some editors.
plugins.md030.enabled = false
# Allow varying unordered-list indentation.
plugins.md007.enabled = false
# Skill / agent description lines naturally end in punctuation when promoted to headings by the renderer.
plugins.md026.enabled = false
# Bold text used as pseudo-headings is an established pattern in skill files.
plugins.md036.enabled = false
# Templates and reference docs intentionally repeat heading text.
plugins.md024.enabled = false
# Inline HTML (e.g. ``<details>`` blocks) is occasionally used in long-form docs.
plugins.md033.enabled = false
# Shell-prompt prefixes (``$ cmd``) are useful in setup instructions.
plugins.md014.enabled = false
# Image alt text is enforced in notebooks separately; .md image usage is rare.
plugins.md045.enabled = false
